Fixing flickering on chrome and added some more effects

--- a/styles/main.css
+++ b/styles/main.css
@@ -48,11 +48,13 @@ button {
   color: rgb(127, 223, 255);
   padding: 10px;
   background-color: white;
+  box-shadow: inset 0 0 0 0.01px #fff;
 }
 button:hover {
   -webkit-transition: box-shadow .6s; /* Safari */
   transition: box-shadow .6s;
   box-shadow: inset 0 100px 0 0 rgba(127, 223, 255, 0.8);
+  -webkit-box-shadow: inset 0 634px 0 0 rgba(127, 223, 255, 0.2);
   color: rgba(32, 56, 96, 0.6);
 }
 
@@ -81,21 +83,25 @@ button:hover {
   align-items: center;
   display: flex;
   justify-content: center;
+  box-shadow: inset 0 0 0 0.01px #fff;
 }
 .card:hover {
   -webkit-transition: box-shadow .4s; /* Safari */
   transition: box-shadow .4s;
   box-shadow: inset 0 300px 0 0 rgba(127, 223, 255, 0.2);
+  -webkit-box-shadow: inset 0 634px 0 0 rgba(127, 223, 255, 0.2);
   color: white;
 }
 .tallcard {
   float: left;
   height: 634px;
+  box-shadow: inset 0 0 0 0.01px #fff;
 }
 .tallcard:hover {
   -webkit-transition: box-shadow .4s; /* Safari */
   transition: box-shadow .4s;
-  box-shadow: inset 0 604px 0 0 rgba(127, 223, 255, 0.2);
+  box-shadow: inset 0 634px 0 0 rgba(127, 223, 255, 0.2);
+  -webkit-box-shadow: inset 0 634px 0 0 rgba(127, 223, 255, 0.2);
   color: white;
 }
 .card p, .tallcard p {
