--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -18,10 +18,12 @@
   color: #4286f4;
   padding: 20px;
   background: radial-gradient(rgba(127, 223, 255, 0.15), rgba(127, 223, 255, 0.1), rgba(127, 223, 255, 0.15));
+  box-shadow: inset 0 0 0 0.01px #fff;
 }
 .navbar button:hover {
   -webkit-transition: box-shadow .6s; /* Safari */
   transition: box-shadow .6s;
   box-shadow: inset 0 100px 0 0 rgba(127, 223, 255, 0.8);
+  -webkit-box-shadow: inset 0 634px 0 0 rgba(127, 223, 255, 0.2);
   color: rgba(32, 56, 96, 0.6);
 }
